--- a/src/Components/Translations/en.json
+++ b/src/Components/Translations/en.json
@@ -103,7 +103,7 @@
   "Security":"Security",
   "Loggia":"Loggia",
   "Attic":"Attic",
-  "Heated_loor":"Heated floor",
+  "Heated_floor":"Heated floor",
   "Metro":"Metro",
   "Fenced":"Fenced",
   "Technics":"Technics"
