--- a/src/Components/Translations/ru.json
+++ b/src/Components/Translations/ru.json
@@ -1,110 +1,111 @@
 {
-  "SALE": "For Sale",
-  "RENT": "For Rent",
-  "CONTACT": "Contact Us",
-  "BUY": "Buy",
-  "RENTING": "Rent",
-  "DAILY": "Daily",
-  "Property_Type": "Property Type",
-  "Apartment": "Apartment",
-  "House": "House",
-  "Commercial": "Commercial",
-  "Land": "Land",
-  "Place": "Place",
-  "Yerevan": "Yerevan",
-  "Kentron": "Kentron",
-  "Arabkir": "Arabkir",
-  "Achapnyak": "Achapnyak",
-  "Qanaqer-Zeytun": "Qanaqer-Zeytun",
-  "Davtashen": "Davtashen",
-  "Erebuni": "Erebuni",
-  "Malatia-Sebastia": "Malatia-Sebastia",
-  "Nor-Nork": "Nor-Nork",
-  "Norq-Marash": "Norq-Marash",
-  "Shengavit": "Shengavit",
-  "Nubarashen": "Nubarashen",
-  "Rooms": "Rooms",
-  "Area": "Area",
-  "Price": "Price",
-  "Search": "Search",
-  "from": "from",
-  "to": "to",
-  "Newly_Built": "Newly Built",
-  "Code": "Code",
-  "More_Filters": "More Filters",
-  "Street": "Street",
-  "Floor": "Floor",
-  "Building_Floors": "Building Floors",
-  "Height": "Height",
-  "2.45m": "2.45m",
-  "2.55m": "2.55m",
-  "2.75m": "2.75m",
-  "3m": "3m",
-  "3.20m": "3.20m",
-  "House_Type": "House Type",
-  "Stone": "Stone",
-  "Monolith": "Monolith",
-  "Panel": "Panel",
-  "Other": "Other",
-  "Renovation": "Renovation",
-  "Zero_Condition": "Zero Condition",
-  "Newly_repaired": "Newly repaired",
-  "Good": "Good",
-  "Old_Renovation": "Old Renovation",
-  "NEW": "NEW",
-  "BEST_OFFERS!": "BEST OFFERS!",
-  "FREQUENTLY_ASKED": "FREQUENTLY ASKED",
-  "Sale_Page": "Sale Page",
-  "Location": "Location",
-  "Number_of_Bathrooms": "Number of Bathrooms",
-  "Building_Type": "Building Type",
-  "All": "All",
-  "Yes": "Yes",
-  "No": "No",
-  "Rent_Page": "Rent Page",
-  "Contact_Us": "Contact Us",
-  "Contact_Summary" : "We are a dedicated team of real estate professionals,committed to helping you find your dream home or investment property.Contact us today for personalized service and expert guidance.",
-  "Telephone": "Telephone" ,
-  "Address": "Address",
-  "Our Location": "Our Location",
-  "Submit": "Submit",
-  "Name_Surname": "Name Surname",
-  "Your_Email": "Your Email",
-  "About": "About",
-  "Build_type": "Build type",
-  "Condition": "Condition",
-  "Total_space": "Total space",
-  "M":"M",
-  "Contact_Me": "Contact Me",
-  "Your_Number":"Your Number",
-  "FACILITIES":"FACILITIES",
-  "More_Information":"More Information",
-  "Gas":"Gas",
-  "Internet":"Internet",
-  "Electricity":"Electricity",
-  "Water":"Water",
-  "Heating_System":"Heating System",
-  "Conditioner":"Conditioner",
-  "Sunny":"sunny",
-  "Beautiful_view":"Beautiful view",
-  "Fireplace":"Fireplace",
-  "Elevator":"Elevator",
-  "Storage_room":"Storage room",
-  "Roadside":"Roadside",
-  "Sauna":"Sauna",
-  "Kitchen_furniture":"Kitchen furniture",
-  "Parking":"Parking",
-  "Open_balcony":"Open balcony",
-  "Basement":"Basement",
-  "High_first_floor":"High first floor",
-  "Near_the_bus_stop":"Near the bus stop",
-  "Park":"Park",
-  "Furniture":"Furniture",
-  "Security":"Security",
-  "Loggia":"Loggia",
-  "Attic":"Attic",
-  "Heated_loor":"Heated floor",
-  "Metro":"Metro",
-  "Fenced":"Fenced",
-  "Technics":"Technics"
+  "SALE": "Продажа",
+  "RENT": "Аренда",
+  "CONTACT": "Связаться с нами",
+  "BUY": "Продажа",
+  "RENTING": "Снять",
+  "DAILY": "Посуточно",
+  "Property_Type": "Вид недвижимости",
+  "Apartment": "Квартира",
+  "House": "Дом",
+  "Commercial": "Коммерческая",
+  "Land": "Земля",
+  "Place": "Расположение",
+  "Yerevan": "Ереван",
+  "Kentron": "Кентрон",
+  "Arabkir": "Арабкир",
+  "Achapnyak": "Ачапняк",
+  "Qanaqer-Zeytun": "Канакер-Зейтун",
+  "Davtashen": "Давиташен",
+  "Erebuni": "Эребуни",
+  "Malatia-Sebastia": "Малатиа-Себастиа",
+  "Nor-Nork": "Нор Норк",
+  "Norq-Marash": "Норк Мараш",
+  "Shengavit": "Шенгавит",
+  "Nubarashen": "Нубарашен",
+  "Rooms": "Комнаты",
+  "Area": "Площадь",
+  "Price": "Цена",
+  "Search": "Поиск",
+  "from": "От",
+  "to": "До",
+  "Newly_Built": "Новостройка",
+  "Code": "Код",
+  "More_Filters": "Подробнее",
+  "Street": "Улица",
+  "Floor": "Этаж",
+  "Building_Floors": "Этажность",
+  "Height": "Высота потолков",
+  "2.45m": "2.45м",
+  "2.55m": "2.55м",
+  "2.75m": "2.75м",
+  "3m": "3м",
+  "3.20m": "3.20м",
+  "House_Type": "Материал дома",
+  "Stone": "Каменный",
+  "Monolith": "Монолитный",
+  "Panel": "Панельный",
+  "Other": "Другое",
+  "Renovation": "Состояние",
+  "Zero_Condition": "Нулевое состояние",
+  "Newly_repaired": "Новое",
+  "Good": "Хорошее",
+  "Old_Renovation": "Старый Ремонт",
+  "NEW": "Новое",
+  "BEST_OFFERS!": "Лучшее Предложение!",
+  "FREQUENTLY_ASKED": "Актуальные",
+  "Sale_Page": "Продажа",
+  "Location": "Расположение",
+  "Number_of_Bathrooms": "Санузел",
+  "Building_Type": "Материал дома",
+  "All": "Все",
+  "Yes": "Да",
+  "No": "Нет",
+  "Rent_Page": "Аренда",
+  "Contact_Us": "Связаться с нами",
+  "Contact_Summary" : "Мы преданная команда профессионалов в сфере недвижимости, которые помогут вам найти дом своей мечты или инвестиционную недвижимость.",
+  "Telephone": "Тел." ,
+  "Address": "Адрес",
+  "Our_Location": "Наше Расположение",
+  "Submit": "Отправить",
+  "Name_Surname": "ФИО",
+  "Your_Email": "Эл. Почта",
+  "About": "Тема",
+  "Build_type": "Материал дома",
+  "Condition": "Состояние",
+  "Total_space": "Площадь",
+  "M":"М",
+  "Contact_Me": "Отправить",
+  "Your_Number":"Ваш Номер",
+  "FACILITIES":"Комунальные удобства",
+  "More_Information":"Подробности",
+  "Gas":"Газ",
+  "Internet":"Интернет",
+  "Electricity":"Электричество",
+  "Water":"Вода",
+  "Heating_System":"Отопление",
+  "Conditioner":"Кондиционер",
+  "Sunny":"Светлый",
+  "Beautiful_view":"Красивый вид",
+  "Fireplace":"Камин",
+  "Elevator":"Лифт",
+  "Storage_room":"Кладовка",
+  "Roadside":"Придорожный",
+  "Sauna":"Сауна",
+  "Kitchen_furniture":"Кухонная мебель",
+  "Parking":"Парковка",
+  "Open_balcony":"Открытый балкон",
+  "Basement":"Подвал",
+  "High_first_floor":"Бельэтаж",
+  "Near_the_bus_stop":"Автобусная станция",
+  "Park":"Парк",
+  "Furniture":"Мебель",
+  "Security":"Охрана",
+  "Loggia":"Лоджия",
+  "Attic":"Мансарда",
+  "Heated_loor":"Теплый пол",
+  "Metro":"Метро",
+  "Fenced":"Огрождение",
+  "Technics":"Техника",
+  "Lift": "Лифт"
 }
