--- a/src/Components/Translations/en.json
+++ b/src/Components/Translations/en.json
@@ -66,7 +66,7 @@
   "Contact_Summary" : "We are a dedicated team of real estate professionals,committed to helping you find your dream home or investment property.Contact us today for personalized service and expert guidance.",
   "Telephone": "Telephone" ,
   "Address": "Address",
-  "Our Location": "Our Location",
+  "Our_Location": "Our Location",
   "Submit": "Submit",
   "Name_Surname": "Name Surname",
   "Your_Email": "Your Email",
@@ -106,5 +106,6 @@
   "Heated_floor":"Heated floor",
   "Metro":"Metro",
   "Fenced":"Fenced",
-  "Technics":"Technics"
+  "Technics":"Technics",
+  "Lift": "Elevator"
 }
