--- a/src/Components/Translations/hy.json
+++ b/src/Components/Translations/hy.json
@@ -5,106 +5,107 @@
   "BUY": "Վաճառք",
   "RENTING": "Վարձով",
   "DAILY": "Օրավարձ",
-  "Property_Type": "Property Type",
-  "Apartment": "Apartment",
-  "House": "House",
-  "Commercial": "Commercial",
-  "Land": "Land",
-  "Place": "Place",
-  "Yerevan": "Yerevan",
-  "Kentron": "Kentron",
-  "Arabkir": "Arabkir",
-  "Achapnyak": "Achapnyak",
-  "Qanaqer-Zeytun": "Qanaqer-Zeytun",
-  "Davtashen": "Davtashen",
-  "Erebuni": "Erebuni",
-  "Malatia-Sebastia": "Malatia-Sebastia",
-  "Nor-Nork": "Nor-Nork",
-  "Norq-Marash": "Norq-Marash",
-  "Shengavit": "Shengavit",
-  "Nubarashen": "Nubarashen",
-  "Rooms": "Rooms",
-  "Area": "Area",
-  "Price": "Price",
-  "Search": "Search",
-  "from": "from",
-  "to": "to",
-  "Newly_Built": "Newly Built",
-  "Code": "Code",
-  "More_Filters": "More Filters",
-  "Street": "Street",
-  "Floor": "Floor",
-  "Building_Floors": "Building Floors",
-  "Height": "Height",
-  "2.45m": "2.45m",
-  "2.55m": "2.55m",
-  "2.75m": "2.75m",
-  "3m": "3m",
-  "3.20m": "3.20m",
-  "House_Type": "House Type",
-  "Stone": "Stone",
-  "Monolith": "Monolith",
-  "Panel": "Panel",
-  "Other": "Other",
-  "Renovation": "Renovation",
-  "Zero_Condition": "Zero Condition",
-  "Newly_repaired": "Newly repaired",
-  "Good": "Good",
-  "Old_Renovation": "Old Renovation",
-  "NEW": "NEW",
-  "BEST_OFFERS!": "BEST OFFERS!",
-  "FREQUENTLY_ASKED": "FREQUENTLY ASKED",
-  "Sale_Page": "Sale Page",
-  "Location": "Location",
-  "Number_of_Bathrooms": "Number of Bathrooms",
-  "Building_Type": "Building Type",
-  "All": "All",
-  "Yes": "Yes",
-  "No": "No",
-  "Rent_Page": "Rent Page",
-  "Contact_Us": "Contact Us",
-  "Contact_Summary" : "We are a dedicated team of real estate professionals,committed to helping you find your dream home or investment property.Contact us today for personalized service and expert guidance.",
-  "Telephone": "Telephone" ,
-  "Address": "Address",
-  "Our Location": "Our Location",
-  "Submit": "Submit",
-  "Name_Surname": "Name Surname",
-  "Your_Email": "Your Email",
-  "About": "About",
-  "Build_type": "Build type",
-  "Condition": "Condition",
-  "Total_space": "Total space",
-  "M":"M",
-  "Contact_Me": "Contact Me",
-  "Your_Number":"Your Number",
-  "FACILITIES":"FACILITIES",
-  "More_Information":"More Information",
-  "Gas":"Gas",
-  "Internet":"Internet",
-  "Electricity":"Electricity",
-  "Water":"Water",
-  "Heating_System":"Heating System",
-  "Conditioner":"Conditioner",
-  "Sunny":"sunny",
-  "Beautiful_view":"Beautiful view",
-  "Fireplace":"Fireplace",
-  "Elevator":"Elevator",
-  "Storage_room":"Storage room",
-  "Roadside":"Roadside",
-  "Sauna":"Sauna",
-  "Kitchen_furniture":"Kitchen furniture",
-  "Parking":"Parking",
-  "Open_balcony":"Open balcony",
-  "Basement":"Basement",
-  "High_first_floor":"High first floor",
-  "Near_the_bus_stop":"Near the bus stop",
-  "Park":"Park",
-  "Furniture":"Furniture",
-  "Security":"Security",
-  "Loggia":"Loggia",
-  "Attic":"Attic",
-  "Heated_loor":"Heated floor",
-  "Metro":"Metro",
-  "Fenced":"Fenced",
-  "Technics":"Technics"
+  "Property_Type": "Գույքի տեսակը",
+  "Apartment": "Բնակարան",
+  "House": "Առանձնատուն",
+  "Commercial": "Կոմերցիոն",
+  "Land": "Հողատարածք",
+  "Place": "Տարածք",
+  "Yerevan": "Երևան",
+  "Kentron": "Կենտրոն",
+  "Arabkir": "Արաբկիր",
+  "Achapnyak": "Աջափնյակ",
+  "Qanaqer-Zeytun": "Քանաքեռ-Զեյթուն",
+  "Davtashen": "Դավթաշեն",
+  "Erebuni": "էրեբունի",
+  "Malatia-Sebastia": "Մալաթիա Սեբաստիա",
+  "Nor-Nork": "Նոր-Նորք",
+  "Norq-Marash": "Նորք-Մարաշ",
+  "Shengavit": "Շենգավիթ",
+  "Nubarashen": "Նուբարաշեն",
+  "Rooms": "Սենյակ",
+  "Area": "Մակերես",
+  "Price": "Արժեք",
+  "Search": "Որոնել",
+  "from": "-ից",
+  "to": "մինչև",
+  "Newly_Built": "Նորակառույց",
+  "Code": "Կոդ",
+  "More_Filters": "Մանրամասնել",
+  "Street": "Փողոց",
+  "Floor": "Հարկ",
+  "Building_Floors": "Հարկայնություն",
+  "Height": "Առաստաղի բարձրություն",
+  "2.45m": "2.45մ",
+  "2.55m": "2.55մ",
+  "2.75m": "2.75մ",
+  "3m": "3մ",
+  "3.20m": "3.20մ",
+  "House_Type": "Շին. տեսակը",
+  "Stone": "Քարե",
+  "Monolith": "Մոնոլիտ",
+  "Panel": "Պանել",
+  "Other": "Այլ",
+  "Renovation": "Վերանորոգում",
+  "Zero_Condition": "Զրոյական",
+  "Newly_repaired": "Նոր վերանորոգված",
+  "Good": "Լավ",
+  "Old_Renovation": "Հին վերանորոգում",
+  "NEW": "Նոր",
+  "BEST_OFFERS!": "Լավագույն առաջարկնեռ!",
+  "FREQUENTLY_ASKED": "Հաճախ դիտվող",
+  "Sale_Page": "Վաճառք",
+  "Location": "Վայր",
+  "Number_of_Bathrooms": "Սանհանգույց",
+  "Building_Type": "Շինության տիպ",
+  "All": "Բոլոր",
+  "Yes": "Այո",
+  "No": "Ոչ",
+  "Rent_Page": "Վարձակալություն",
+  "Contact_Us": "Կապնվել մեզ հետ",
+  "Contact_Summary" : "Մենք անշարժ գույքի մասնագետների  թիմ ենք, ովքեր ցանկանում են օգնել ձեզ գտնել ձեր երազած տունը կամ ներդրումային գույքը:Կապվեք մեզ հետ այսօր անհատականացված ծառայության և փորձագիտական խորհրդատվության համար.",
+  "Telephone": "Հեռաղոսահամար" ,
+  "Address": "Հասցե",
+  "Our_Location": "Մեր հասցեն",
+  "Submit": "Հաստատել",
+  "Name_Surname": "Անուն Ազգանուն",
+  "Your_Email": "Էլ. հասցե",
+  "About": "Նամակ",
+  "Build_type": "Տեսակը",
+  "Condition": "Վիճակ",
+  "Total_space": "Մակերես",
+  "M":"Մ",
+  "Contact_Me": "Կապնվել",
+  "Your_Number":"Ձեր հեռախոսահամարը",
+  "FACILITIES":"Կոմունալ",
+  "More_Information":"Այլ Տեղեկություն",
+  "Gas":"Գազ",
+  "Internet":"Համացանց",
+  "Electricity":"Էլեկտրոէներգիա",
+  "Water":"Ջուր",
+  "Heating_System":"Ջեռուցման համակարգ",
+  "Conditioner":"Օդորակիչ",
+  "Sunny":"Արևկողմ",
+  "Beautiful_view":"Գեղեցիկ տեսարան",
+  "Fireplace":"Բուխարի",
+  "Elevator":"Վերելակ",
+  "Storage_room":"Խորդանոց",
+  "Roadside":"Ճանապարհամերձ",
+  "Sauna":"Շոգեբաղնիք",
+  "Kitchen_furniture":"Խոհանոցաին կահույք",
+  "Parking":"Կայանատեղի",
+  "Open_balcony":"Բաց պատշգամբ",
+  "Basement":"Նկուղ",
+  "High_first_floor":"Բարձր առաջին հարկ",
+  "Near_the_bus_stop":"Կանգառին մոտ",
+  "Park":"Զբոսայգի",
+  "Furniture":"Կահույք",
+  "Security":"Անվտանգություն",
+  "Loggia":"Լոջա",
+  "Attic":"Ձեղնահարկ",
+  "Heated_loor":"Տաքացվոզ հատակ",
+  "Metro":"Մետրո",
+  "Fenced":"Պարսպապատ",
+  "Technics":"Տեխնեիկա",
+  "Lift": "Վերելակ"
 }
