added daily page,created dashboard

--- a/src/Components/Translations/en.json
+++ b/src/Components/Translations/en.json
@@ -107,5 +107,6 @@
   "Metro":"Metro",
   "Fenced":"Fenced",
   "Technics":"Technics",
-  "Lift": "Elevator"
+  "Lift": "Elevator",
+  "Daily_Page": "Daily"
 }
