--- a/src/Components/Translations/hy.json
+++ b/src/Components/Translations/hy.json
@@ -107,5 +107,6 @@
   "Metro":"Մետրո",
   "Fenced":"Պարսպապատ",
   "Technics":"Տեխնեիկա",
-  "Lift": "Վերելակ"
+  "Lift": "Վերելակ",
+  "Daily_Page": "Օրավարձ"
 }
