--- a/src/Components/Translations/ru.json
+++ b/src/Components/Translations/ru.json
@@ -107,5 +107,6 @@
   "Metro":"Метро",
   "Fenced":"Огрождение",
   "Technics":"Техника",
-  "Lift": "Лифт"
+  "Lift": "Лифт",
+  "Daily_Page": "Ежедневно"
 }
