added homepage filterationn and navigationn

--- a/src/Components/Translations/en.json
+++ b/src/Components/Translations/en.json
@@ -6,23 +6,24 @@
   "RENTING": "Rent",
   "DAILY": "Daily",
   "Property_Type": "Property Type",
-  "Apartment": "Apartment",
-  "House": "House",
-  "Commercial": "Commercial",
-  "Land": "Land",
+  "Բնակարան":"Apartment",
+  "Առանձնատուն": "House",
+  "Կոմերցիոն": "Commercial",
+  "Հողատարածք": "Land",
   "Place": "Place",
-  "Yerevan": "Yerevan",
-  "Kentron": "Kentron",
-  "Arabkir": "Arabkir",
-  "Achapnyak": "Achapnyak",
-  "Qanaqer-Zeytun": "Qanaqer-Zeytun",
-  "Davtashen": "Davtashen",
-  "Erebuni": "Erebuni",
-  "Malatia-Sebastia": "Malatia-Sebastia",
-  "Nor-Nork": "Nor-Nork",
-  "Norq-Marash": "Norq-Marash",
-  "Shengavit": "Shengavit",
-  "Nubarashen": "Nubarashen",
+  "Երևան": "Yerevan",
+  "Կենտրոն": "Kentron",
+  "Արաբկիր": "Arabkir",
+  "Աջափնյակ": "Achapnyak",
+  "Քանաքեռ Զեյթուն": "Qanaqer-Zeytun",
+  "Դավթաշեն": "Davtashen",
+  "էրեբունի": "Erebuni",
+  "Մալաթիա Սեբաստիա": "Malatia-Sebastia",
+  "Նոր Նորք": "Nor-Nork",
+  "Նորք Մարաշ": "Norq-Marash",
+  "Շենգավիթ": "Shengavit",
+  "Նուբարաշեն": "Nubarashen",
+  "Ավան":  "Avan",
   "Rooms": "Rooms",
   "Area": "Area",
   "Price": "Price",
