--- a/src/Components/Translations/hy.json
+++ b/src/Components/Translations/hy.json
@@ -6,23 +6,24 @@
   "RENTING": "Վարձով",
   "DAILY": "Օրավարձ",
   "Property_Type": "Գույքի տեսակը",
-  "Apartment": "Բնակարան",
-  "House": "Առանձնատուն",
-  "Commercial": "Կոմերցիոն",
-  "Land": "Հողատարածք",
+  "Բնակարան": "Բնակարան",
+  "Առանձնատուն": "Առանձնատուն",
+  "Կոմերցիոն": "Կոմերցիոն",
+  "Հողատարածք": "Հողատարածք",
   "Place": "Տարածք",
-  "Yerevan": "Երևան",
-  "Kentron": "Կենտրոն",
-  "Arabkir": "Արաբկիր",
-  "Achapnyak": "Աջափնյակ",
-  "Qanaqer-Zeytun": "Քանաքեռ-Զեյթուն",
-  "Davtashen": "Դավթաշեն",
-  "Erebuni": "էրեբունի",
-  "Malatia-Sebastia": "Մալաթիա Սեբաստիա",
-  "Nor-Nork": "Նոր-Նորք",
-  "Norq-Marash": "Նորք-Մարաշ",
-  "Shengavit": "Շենգավիթ",
-  "Nubarashen": "Նուբարաշեն",
+  "Երևան": "Երևան",
+  "Կենտրոն": "Կենտրոն",
+  "Արաբկիր": "Արաբկիր",
+  "Աջափնյակ": "Աջափնյակ",
+  "Քանաքեռ Զեյթուն": "ՔանաքեռԶեյթուն",
+  "Դավթաշեն": "Դավթաշեն",
+  "էրեբունի": "էրեբունի",
+  "Մալաթիա Սեբաստիա": "Մալաթիա Սեբաստիա",
+  "Նոր Նորք": "Նոր-Նորք",
+  "Նորք Մարաշ": "Նորք-Մարաշ",
+  "Շենգավիթ": "Շենգավիթ",
+  "Նուբարաշեն": "Նուբարաշեն",
+  "Ավան":  "Ավան",
   "Rooms": "Սենյակ",
   "Area": "Մակերես",
   "Price": "Արժեք",
