--- a/src/Components/Translations/ru.json
+++ b/src/Components/Translations/ru.json
@@ -6,23 +6,24 @@
   "RENTING": "Снять",
   "DAILY": "Посуточно",
   "Property_Type": "Вид недвижимости",
-  "Apartment": "Квартира",
-  "House": "Дом",
-  "Commercial": "Коммерческая",
-  "Land": "Земля",
+  "Բնակարան": "Квартира",
+  "Առանձնատուն": "Дом",
+  "Կոմերցիոն": "Коммерческая",
+  "Հողատարածք":"Земля",
   "Place": "Расположение",
-  "Yerevan": "Ереван",
-  "Kentron": "Кентрон",
-  "Arabkir": "Арабкир",
-  "Achapnyak": "Ачапняк",
-  "Qanaqer-Zeytun": "Канакер-Зейтун",
-  "Davtashen": "Давиташен",
-  "Erebuni": "Эребуни",
-  "Malatia-Sebastia": "Малатиа-Себастиа",
-  "Nor-Nork": "Нор Норк",
-  "Norq-Marash": "Норк Мараш",
-  "Shengavit": "Шенгавит",
-  "Nubarashen": "Нубарашен",
+  "Երևան": "Ереван",
+  "Կենտրոն": "Кентрон",
+  "Արաբկիր": "Арабкир",
+  "Աջափնյակ": "Ачапняк",
+  "Քանաքեռ Զեյթուն": "Канакер-Зейтун",
+  "Դավթաշեն": "Давиташен",
+  "էրեբունի": "Эребуни",
+  "Մալաթիա Սեբաստիա": "Малатиа-Себастиа",
+  "Նոր Նորք": "Нор Норк",
+  "Նորք Մարաշ": "Норк Мараш",
+  "Շենգավիթ": "Шенгавит",
+  "Նուբարաշեն": "Нубарашен",
+  "Ավան":  "Аван",
   "Rooms": "Комнаты",
   "Area": "Площадь",
   "Price": "Цена",
