--- a/src/Components/Translations/hy.json
+++ b/src/Components/Translations/hy.json
@@ -15,7 +15,7 @@
   "Կենտրոն": "Կենտրոն",
   "Արաբկիր": "Արաբկիր",
   "Աջափնյակ": "Աջափնյակ",
-  "Քանաքեռ Զեյթուն": "ՔանաքեռԶեյթուն",
+  "Քանաքեռ Զեյթուն": "Քանաքեռ Զեյթուն",
   "Դավթաշեն": "Դավթաշեն",
   "էրեբունի": "էրեբունի",
   "Մալաթիա Սեբաստիա": "Մալաթիա Սեբաստիա",
@@ -53,7 +53,7 @@
   "Good": "Լավ",
   "Old_Renovation": "Հին վերանորոգում",
   "NEW": "Նոր",
-  "BEST_OFFERS!": "Լավագույն առաջարկնեռ!",
+  "BEST_OFFERS!": "Լավագույն առաջարկներ",
   "FREQUENTLY_ASKED": "Հաճախ դիտվող",
   "Sale_Page": "Վաճառք",
   "Location": "Վայր",
@@ -109,5 +109,6 @@
   "Fenced":"Պարսպապատ",
   "Technics":"Տեխնեիկա",
   "Lift": "Վերելակ",
-  "Daily_Page": "Օրավարձ"
+  "Daily_Page": "Օրավարձ",
+  "Newly_Built": "Նորակառույց"
 }
