--- a/src/Components/Translations/ru.json
+++ b/src/Components/Translations/ru.json
@@ -53,7 +53,7 @@
   "Good": "Хорошее",
   "Old_Renovation": "Старый Ремонт",
   "NEW": "Новое",
-  "BEST_OFFERS!": "Лучшее Предложение!",
+  "BEST_OFFERS!": "Лучшее Предложение",
   "FREQUENTLY_ASKED": "Актуальные",
   "Sale_Page": "Продажа",
   "Location": "Расположение",
@@ -109,5 +109,8 @@
   "Fenced":"Огрождение",
   "Technics":"Техника",
   "Lift": "Лифт",
-  "Daily_Page": "Ежедневно"
+  "Daily_Page": "Ежедневно",
+  "Այո": "Да",
+  "Ոչ": "Нет",
+  "Newly_Built": "Новостройки"
 }
